IL - add API for Import external model from CSV files
